--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="code/app.js"></script>
     <script src="code/player.js"></script>
     <script src="code/obstaculos.js"></script>
+    <!-- <script src="code/enemy.js"></script> -->
+    <script src="code/entity.js"></script>
 
 
 
