--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script src="code/player.js"></script>
     <script src="code/obstaculos.js"></script> 
     <script src="code/entity.js"></script>
-    <script src="code/enemyG.js"></script>
-    <script src="code/enemyP.js"></script>
-    <script src="code/enemyO.js"></script>
+    <script src="code/enemy/enemy.js"></script>
+    <script src="code/stage/background.js"></script>
+    
    
 </head>
 
@@ -17,9 +17,7 @@
     <script>
         let juego = new Juego()
 
-        juego.agregarEnemyG(Math.random() * window.innerWidth, Math.random()* innerHeight)
-        juego.agregarEnemyO(Math.random() * window.innerWidth, Math.random()* innerHeight)
-        juego.agregarEnemyP(Math.random() * window.innerWidth, Math.random()* innerHeight)
+        juego.agregarEnemy(Math.random() * window.innerWidth, Math.random()* innerHeight)
 
     </script>
 
