Status actual de los enemigos, agregue pantalla de inicio, pantalla de help, creacion de spawner funcional, el comportamiento no funciona, no se puede cargar bien los cristales, problemas con el movimiento

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <script src="https://pixijs.download/release/pixi.min.js"></script>
     <script src="code/utils.js"></script>
     <script src="code/app.js"></script>
+    <script src="code/pantallaDeInicio.js"></script>
     <script src="code/player.js"></script>
     <script src="code/obstaculos.js"></script> 
     <script src="code/entity.js"></script>
     <script src="code/enemy/enemy.js"></script>
     <script src="code/stage/background.js"></script>
+    <script src="code/spawner.js"></script>
+    <script src="code/stage/cristal.js"></script>
+
     
    
 </head>
@@ -17,8 +21,7 @@
     <script>
         let juego = new Juego()
 
-        juego.agregarEnemy(Math.random() * window.innerWidth, Math.random()* innerHeight)
-
+        
     </script>
 
 
