--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="code/player.js"></script>
     <script src="code/obstaculos.js"></script> 
     <script src="code/entity.js"></script>
+    <script src="code/ally/ally.js"></script>
     <script src="code/enemy/enemy.js"></script>
     <script src="code/stage/background.js"></script>
     <script src="code/spawner.js"></script>
