celdas, enemigos, torres, cristales y hud implementados

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <script src="code/utils.js"></script>
     <script src="code/app.js"></script>
     <script src="code/pantallaDeInicio.js"></script>
-    
+    <script src="code/stage/cell.js"></script>
+    <script src="code/stage/grid.js"></script>
     <script src="code/obstaculos.js"></script> 
     <script src="code/entity.js"></script>
     <script src="code/ally/ally.js"></script>
@@ -14,6 +15,13 @@
     <script src="code/spawner.js"></script>
     <script src="code/stage/cristal.js"></script>
     <script src="code/player.js"></script>
+    <script src="code/stage/hud.js"></script>
+    <script src="code/stage/cronometro.js"></script>
+    <script src="code/stage/cristal.js"></script>
+    <script src="code/stage/torres.js"></script>
+    <script src="code/stage/pause.js"></script>
+    <script src="code/stage/hud_counter.js"></script>
+
     
    
 </head>
