trabajo semi terminado faltan hacer retoques pero cumplen con el minimo que habiamos pensado

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <script src="code/stage/pause.js"></script>
     <script src="code/stage/hud_counter.js"></script>
 
+    <script src="code/gameOver.js"></script>
+
     
    
 </head>
